[package]
name = "rezoning-scraper"
version = "3.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive", "env"] }
scraper = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
indicatif = "0.17.8"
colored = "2.1.0"

# Force vendored OpenSSL on Linux to make building for musl easier
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"]}

# build with `cargo build --profile profiling`
# to analyze performance with tooling like linux perf
[profile.profiling]
inherits = "release"
strip = false
debug = true
